# neural_seq_decoder

./: .gitignore  README.md  pyproject.toml
notebooks/: data_exploration.ipynb  formatCompetitionData.py
scripts/: _eval_competition.py  _torchFormatCompetitionData.py  _train_t2b.py  _train_text2brain.py  eval.py  eval.sh  eval_competition.sh  eval_competition_.py  eval_phoneme_classifier.py  eval_phoneme_classifier_synthetic.py  eval_phoneme_classifier_synthetic.sh  eval_vae.py  explore_synthetic_data.py  explore_synthetic_data.sh  explore_vae_latent_space.py  formatCompetitionData.py  format_competition_data.py  mann_whitney.py  phoneme_analysis.py  phoneme_analysis_correlation.py  store_synthetic_data.py  text2brain_dummy.py  torchFormatCompetitionData.py  train_b2t_rnn.py  train_b2t_rnn.sh  train_model.py  train_model.sh  train_phoneme_classifier.py  train_phoneme_classifier.sh  train_phoneme_classifier_synthetic.py  train_phoneme_classifier_synthetic.sh  train_t2b.py  train_t2b_gan.sh  train_t2b_simple_gan.py  train_t2b_simple_gan.sh  train_t2b_simple_gan_binary.py  train_t2b_vae.py  train_t2b_vae.sh  train_text2brain.py
src/: evaluation.py  utils.py
src/data/: augmentations.py  dataloader.py  dataset.py
src/neural_decoder/: augmentations.py  dataloader.py  dataset.py  model.py  model_phoneme_classifier.py  neural_decoder_trainer.py  phoneme_utils.py  transforms.py
src/text2brain/: rnn.py  synthetic_data.py  visualization.py
tests/: evaluation_test.py
tests/data_tests/: dataloader_test.py  dataset_test.py
tests/neural_decoder_tests/: dataloader_test.py  (+3 more)
(+16 files in other folders)
